# stashcontrol

./: ProcFile  README.md  db.sqlite3  initial.json  manage.py  pyproject.toml  railway_start.sh  server  start
stashcontrol/: asgi.py  settings.py  sqlite.py  urls.py  wsgi.py
tracker/: admin.py  models.py  views.py
tracker/fixtures/: initial.json
tracker/management/commands/: build_cache.py
tracker/migrations/: 0001_initial.py  0002_alter_container_dispensed_alter_container_finished_and_more.py  0003_measurement_final_measurement_initial.py  0004_container_initial_gross.py  0005_batch_thc.py  0006_remove_batch_thc_product_cbd_product_cbg_product_thc.py  0007_container_cost.py  0008_sponsor_product_cbc_product_cbv_product_thcv_and_more.py  0009_patient.py  0010_patient_monthly_target.py  0011_patientday.py
tracker/templates/: dash.html  login.html
